syntax = "proto3";

option go_package = "github.com/SpiralMindJP/at-sdk/go/pb/common";

package at.common;

import "google/protobuf/timestamp.proto";

/*
 * デバイスのタイプを表します。
 */
enum DeviceType {
  DEVICE_TYPE_OPERATOR = 0; // オペレーターデバイスを表します。
  DEVICE_TYPE_CUSTOMER = 1; // カスタマーデバイスを表します。
}

/*
 * デバイスの接続状態を表します。
 */
enum DeviceConnectionState {
  DEVICE_OFFLINE = 0; // デバイスがオフライン。
  DEVICE_ONLINE  = 1; // デバイスがオンライン。
}

// ルームの状態を表します。
message RoomState {
  int64  team_id       = 1; // チームID。
  int64  room_id       = 2; // ルームID。
  string name          = 3; // ルーム名。
  int64  room_group_id = 4; // ルームグループID。

  repeated DeviceState device_states = 11; // デバイスの状態のリスト。
}

// デバイスの状態を表します。
message DeviceState {
  int64                 team_id          = 1; // チームID。
  int64                 device_id        = 2;// デバイスID。
  DeviceType            type             = 3;// デバイスタイプ。
  DeviceConnectionState connection_state = 4;// デバイスの接続状態。
}

/*
 * チームを表します。
 */
message Team {
  int64  team_id = 1; // チームID。
  string name    = 2; // チーム名。
}

/*
 * チームの契約を表します。
 */
message Contract {
  int64  team_id                   = 1; // チームID。
  int32  max_operator_device_count = 2; // 最大オペレーターデバイス数。
  int32  max_customer_device_count = 3; // 最大カスタマーデバイス数。
  int64  max_total_content_size    = 4; // 最大合計コンテンツサイズ。
  int32  operator_device_count     = 5; // オペレーターデバイス数。
  int32  customer_device_count     = 6; // カスタマーデバイス数。
  int64  total_content_size        = 7; // 合計コンテンツサイズ。
}

/*
 * チームの契約月次実績を表します。
 */
message ContractMonthlyResult {
  int64  team_id                   = 1; // チームID。
  string team_name                 = 2; // チーム名。
  int32  year                      = 3; // 実績年。
  int32  month                     = 4; // 実績月。
  int32  max_operator_device_count = 5; // 最大オペレーターデバイス数。
  int32  max_customer_device_count = 6; // 最大カスタマーデバイス数。
  int64  max_total_content_size    = 7; // 最大合計コンテンツサイズ。
}

/*
 * ルームグループを表します。
 */
message RoomGroup {
  int64  team_id              = 1; // チームID。
  int64  room_group_id        = 2; // ルームグループID。
  int64  parent_room_group_id = 3; // 親ルームグループID。
  string name                 = 4; // ルームグループ名。
  string kind                 = 5; // ルームグループの種類。
  int64  setting_id           = 6; // ルームグループと関連する設定の設定ID。
}

/*
 * ルームを表します。
 */
message Room {
  int64  team_id       = 1; // チームID。
  int64  room_id       = 2; // ルームID。
  string name          = 3; // ルーム名。
  int64  room_group_id = 4; // ルームグループID。

  repeated Device devices = 11; // デバイスリスト。
}

/*
 * デバイスを表します。
 */
message Device {
  int64                     team_id      = 1; // チームID。
  int64                     device_id    = 2; // デバイスID。
  string                    name         = 3; // デバイス名。
  DeviceType                device_type  = 4; // デバイスのタイプ。
  int64                     room_id      = 5; // デバイスが入室しているルームID。
  google.protobuf.Timestamp activated_at = 6; // デバイスがアクティブになった時刻。

  Avatar avatar = 11; // オペレーターデバイスに設定されているアバター情報。
}

/*
 * コンテンツリストを表します。
 */
message ContentList {
  int64            team_id         = 1; // チームID。
  int64            content_list_id = 2; // コンテンツID。
  string           name            = 3; // コンテンツリスト名。
}

/*
 * コンテンツのタイプを表します。
 */
enum ContentType {
  CONTENT_TYPE_IMAGE     = 0;   // 画像コンテンツ。
  CONTENT_TYPE_VIDEO     = 1;   // ビデオコンテンツ。
  CONTENT_TYPE_VRM       = 2;   // アバターVRMコンテンツ。
  CONTENT_TYPE_ANIMATION = 3;   // アニメーションコンテンツ。
  CONTENT_TYPE_OTHER     = 999; // その他のコンテンツ。
}

/*
 * コンテンツを表します。
 */
message Content {
  int64       team_id      = 1; // チームID。
  int64       content_id   = 2; // コンテンツID。
  string      name         = 3; // コンテンツ名。
  ContentType content_type = 4; // コンテンツタイプ。
  int64       size         = 5; // コンテンツのサイズ。
  string      mime_type    = 6; // コンテンツのMIMEタイプ。
  bytes       md5          = 7; // MD5ハッシュ。
  string      ext          = 8; // コンテンツの拡張子。
}

/*
 * 3次元ベイクトルを表します。
 */
message Vector3 {
  double x = 1;
  double y = 2;
  double z = 3;
}

/*
 * アバターを表します。
 */
message Avatar {
  int64            team_id         = 1;  // チームID。
  int64            avatar_id       = 2;  // アバターID。
  string           name            = 3;  // アバター名称。
  int64            content_id      = 4;  // アバターのコンテンツID。
  optional Vector3 camera_position = 5; // カメラの位置。
  optional Vector3 camera_rotation = 6; // カメラの回転。
  optional double  camera_fov      = 7; // カメラの画角。

  repeated Animation animations = 10; // アニメーションのリスト。
}

/*
 * アバターのアニメーションを表します。
 */
message Animation {
  int32  index      = 1; // アニメーションインデックス。
  string name       = 2; // アニメーション名称。
  int64  content_id = 3; // アニメーションのコンテンツID。
}

/*
 * 各種トークンを表します。
 */
message Token {
  string                    token                     = 1; // JWT トークン文字列。
  google.protobuf.Timestamp expiration_time           = 2; // トークンの有効期限。
}

/*
 * 設定を表します。
 */
message Setting {
  int64  team_id              = 1;  // チームID。
  int64  setting_id           = 2;  // 設定ID。
  string name                 = 3;  // 設定名。
  string attributes           = 4;  // 設定の各属性を表す文字列（JSON など）。
}

/*
 * チーム設定を表します。
 */
message TeamSetting {
  int64 team_id              = 1; // チームID。

  int32 call_request_timeout = 10; // 通話リクエストタイムアウト（秒）
}
