syntax = "proto3";

option go_package = "github.com/SpiralMindJP/at-sdk/go/pb/core";

package at_core_service;

import "common.proto";

/*
 * ルームイベントの種類を表します。
 */
enum RoomEventType {
  ROOM_EVENT_ROOM_CREATED = 0; // ルームが作成された。
  ROOM_EVENT_ROOM_DELETED = 1; // ルームが削除された。

  ROOM_EVENT_DEVICE_JOINED  = 10; // ルームにデバイスが入室した。
  ROOM_EVENT_DEVICE_LEAVED  = 11; // ルームからデバイスが退室した。
  ROOM_EVENT_DEVICE_DELETED = 12; // デバイスが削除された。

  ROOM_EVENT_DEVICE_OFFLINE = 20; // デバイスがオフラインになった。
  ROOM_EVENT_DEVICE_ONLINE  = 21; // デバイスがオンラインになった。
}

/*
 * ルームイベントを表します。
 */
message RoomEvent {
  RoomEventType type       = 1; // ルームイベントの種類。
  RoomState     room_state = 2; // ルームの状態。
}

/*
 * オペレーションイベントの種類を表します。
 */
enum OperationEventType {
  OPERATION_EVENT_CONTENT_STOP = 0; // コンテンツの再生を停止する。
  OPERATION_EVENT_CONTENT_PLAY = 1; // コンテンツを再生する。

  OPERATION_EVENT_ANIMATION_STOP = 10; // アニメーションの再生を停止する。
  OPERATION_EVENT_ANIMATION_PLAY = 11; // アニメーションを再生する。
}

/*
 * オペレーションイベントを表します。
 */
message OperationEvent {
  OperationEventType type = 1; // オペレーションイベントの種類。

  int64 content_id      = 10; // コンテンツID。
  int32 animation_index = 20; // アニメーションインデックス。
}
